--- a/views/reviews-index.handlebars
+++ b/views/reviews-index.handlebars
@@ -9,8 +9,9 @@
         <h1>Reviews</h1>
         <a href="/reviews/new/">New Review</a>
         {{#each reviews}}
-            <h2>{{this.title}}</h2>
+            <h2>{{this.reviewTitle}}</h2>
             <small>{{this.movieTitle}}</small>
+            <p>{{this.movieDescription}}</p>
         {{/each}}
     </body>
 </html>
