--- a/views/reviews-new.handlebars
+++ b/views/reviews-new.handlebars
@@ -6,15 +6,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <form action="/reviews" method="POST">
+        <form method="POST" action="/reviews">
             <fieldset>
                 <legend>New Review</legend>
                 <p>
-                    <label for="title">Title</label><br>
-                    <input type="text" name="title">
+                    <label for="review-title">Title</label><br>
+                    <input id="review-title" type="text" name="reviewTitle" />
                 </p>
-                <p><button type="submit">Save Review</button></p>
+                <p>
+                    <label for="movie-title">Movie Title</label><br>
+                    <input id="movie-title" type="text" name="movieTitle" />
+                </p>
+                <p>
+                    <label for="description-text">Description</label><br>
+                    <textarea id="description-text" name="movieDescription" rows="10" /></textarea>
+                </p>
             </fieldset>
+            <p>
+                <button type="submit">Save Review</button>
+            </p>
         </form>
     </body>
 </html>
