Users can add and edit reviews. Using partials to maintain DRY code

--- a/views/reviews-show.handlebars
+++ b/views/reviews-show.handlebars
@@ -2,3 +2,4 @@
 <h1>{{review.reviewTitle}}</h1>
 <h2>{{review.movieTitle}}</h2>
 <p>{{review.movieDescription}}</p>
+<a href="/reviews/{{review._id}}/edit/">Edit</a>
