--- a/views/reviews-new.handlebars
+++ b/views/reviews-new.handlebars
@@ -1,20 +1,3 @@
 <form method="POST" action="/reviews">
-    <fieldset>
-        <legend>New Review</legend>
-        <p>
-            <label for="review-title">Title</label><br>
-            <input id="review-title" type="text" name="reviewTitle" />
-        </p>
-        <p>
-            <label for="movie-title">Movie Title</label><br>
-            <input id="movie-title" type="text" name="movieTitle" />
-        </p>
-        <p>
-            <label for="description-text">Description</label><br>
-            <textarea id="description-text" name="movieDescription" rows="10" /></textarea>
-        </p>
-    </fieldset>
-    <p>
-        <button type="submit">Save Review</button>
-    </p>
+    {{> reviews-form}}
 </form>
