Can now destroy reviews. Still having trouble figuring out why the cancel add and cancel edit buttons to route to index

--- a/views/partials/reviews-form.handlebars
+++ b/views/partials/reviews-form.handlebars
@@ -13,6 +13,7 @@
     <textarea id="review-description" name="description" rows="10" />{{review.movieDescription}}</textarea>
   </p>
   <p>
+    <a href="/"><button>Cancel</button></a>
     <button type="submit">Save Review</button>
   </p>
 </fieldset>
