Reorginized file structure, made a models folder for reviews, and a controllers folder to handle all the review routes.

--- a/views/partials/reviews-form.handlebars
+++ b/views/partials/reviews-form.handlebars
@@ -2,7 +2,7 @@
   <legend>Edit Review</legend>
   <p>
     <label for="review-title">Title</label><br>
-    <input id="review-title" type="text" name="title" value="{{review.reviewTitle}}"/>
+    <input id="review-title" type="text" name="reviewTitle" value="{{review.reviewTitle}}"/>
   </p>
   <p>
     <label for="movie-title">Movie Title</label><br>
@@ -10,7 +10,7 @@
   </p>
   <p>
     <label for="review-description">Description</label><br>
-    <textarea id="review-description" name="description" rows="10" />{{review.movieDescription}}</textarea>
+    <textarea id="review-description" name="movieDescription" rows="10" />{{review.movieDescription}}</textarea>
   </p>
   <p>
     <a href="/"><button>Cancel</button></a>
