Fixed the cancel button

--- a/views/reviews-new.handlebars
+++ b/views/reviews-new.handlebars
@@ -1,4 +1,6 @@
 <form method="POST" action="/reviews">
     {{> reviews-form}}
 </form>
-
+<form method="GET" action="/">
+    <button type="submit">Cancel</button>
+</form>
