--- a/views/reviews-edit.handlebars
+++ b/views/reviews-edit.handlebars
@@ -1,3 +1,6 @@
 <form method="POST" action="/reviews/{{review._id}}?_method=PUT">
   {{> reviews-form}}
 </form>
+<form method="GET" action="/">
+    <button type="submit">Cancel</button>
+</form>
