--- a/views/reviews-edit.handlebars
+++ b/views/reviews-edit.handlebars
@@ -1,6 +1,7 @@
-<form method="POST" action="/reviews/{{review._id}}?_method=PUT">
-  {{> reviews-form}}
-</form>
-<form method="GET" action="/">
-    <button type="submit">Cancel</button>
-</form>
+<div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
+        <form method="POST" action="/reviews/{{review._id}}?_method=PUT">
+            {{> reviews-form}}
+        </form>
+    </div>
+</div>
