--- a/views/reviews-index.handlebars
+++ b/views/reviews-index.handlebars
@@ -1,12 +1,16 @@
 <h1>Reviews</h1>
-<a href="/reviews/new/">New Review</a>
-{{#each reviews}}
-    <h2><a href="/reviews/{{this._id}}">{{this.reviewTitle}}</a></h2>
-    <small>{{this.movieTitle}}</small>
-    <p>{{this.movieDescription}}</p>
-    <p>
-        <form method="POST" action="/reviews/{{this._id}}?_method=DELETE">
-            <button type="submit">Delete</button>
-        </form>
-    </p>
-{{/each}}
+<div class="row">
+    {{#each reviews}}
+        <div class="col-sm-3">
+            <h2><a href="/reviews/{{this._id}}">{{this.reviewTitle}}</a></h2>
+            <small>{{this.movieTitle}}</small>
+            <p>{{this.movieDescription}}</p>
+            <p>
+                <form method="POST" action="/reviews/{{this._id}}?_method=DELETE">
+                    <button type="submit">Delete</button>
+                </form>
+            </p>
+        </div>
+    {{/each}}
+</div>
+
