--- a/views/movies-show.handlebars
+++ b/views/movies-show.handlebars
@@ -1,3 +1,6 @@
+<div class="text-right">
+    <a href="/movies/{{movie.id}}/reviews/new" class="btn btn-primary">Write Review</a>
+</div>
 <div class="row">
     <div class="col-sm-4">
         <img class="img-responsive" src="https://image.tmdb.org/t/p/w500{{movie.poster_path}}"/>
@@ -9,4 +12,8 @@
     <div class="embed-responsive embed-responsive-21by9">
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{{movie.trailer_youtube_id}}?rel=0"></iframe>
     </div>
+    <h3>Reviews</h3>
+    {{#each reviews}}
+        {{> review}}
+    {{/each}}
 </div>
