--- a/views/reviews-new.handlebars
+++ b/views/reviews-new.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-sm-6 col-sm-offset-3">
-        <form method="POST" action="/reviews">
+        <form method="POST" action="/movies/{{movieId}}/reviews">
             {{> reviews-form}}
         </form>
     </div>
